<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Toolbar personalizada -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarNuevaCita"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/toolbar"
        android:elevation="6dp"
        android:padding="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_nueva_cita"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:src="@android:drawable/ic_menu_revert"
            android:contentDescription="@string/back"
            android:layout_gravity="start|center_vertical"
            app:tint="#F05861"/>
    </androidx.appcompat.widget.Toolbar>

    <!-- Nombre de la mascota -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutNombreMascota"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nombre_mascota"
        app:boxStrokeColor="#800080"
        app:boxStrokeWidthFocused="2dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarNuevaCita"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNombreMascota"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:inputType="textPersonName"
            android:maxLength="15" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Raza -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutRaza"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_raza"
        app:boxStrokeColor="#800080"
        app:boxStrokeWidthFocused="2dp"
        app:boxCollapsedPaddingTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutNombreMascota"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp">

        <AutoCompleteTextView
            android:id="@+id/inputRaza"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:inputType="text"
            android:paddingStart="16dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Nombre del propietario -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutNombrePropietario"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nombre_propietario"
        app:boxStrokeColor="#800080"
        app:boxStrokeWidthFocused="2dp"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutRaza"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNombrePropietario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="30"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Teléfono -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutTelefono"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_telefono"
        app:boxStrokeColor="#800080"
        app:boxStrokeWidthFocused="2dp"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutNombrePropietario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Spinner síntomas -->
    <Spinner
        android:id="@+id/spinnerSintomas"
        android:layout_width="0dp"
        android:layout_height="53dp"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutTelefono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp" />

    <!-- Botón guardar -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGuardarCita"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:text="@string/guardar_cita"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:icon="@android:drawable/ic_menu_save"
        android:iconTint="@android:color/white"
        app:iconPadding="8dp"
        android:backgroundTint="#F05861"
        app:cornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/spinnerSintomas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:enabled="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>
