<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        
        <variable
            name="viewmodel"
            type="com.example.equipocatorce.viewmodel.DogAppointmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Toolbar-->
        <include
            layout="@layout/toolbar"
            android:id="@+id/includeToolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.9" />

        <!-- Dog name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiNombreMascota"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/hint_nombre_mascota"
            app:hintTextColor="@color/dark_gray"
            app:boxStrokeColor="@color/purple"
            app:boxStrokeWidthFocused="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/includeToolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEditTextNombreMascota"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:inputType="textPersonName"
                android:maxLength="15" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Raza -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiRaza"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/raza"
            app:hintTextColor="@color/dark_gray"
            app:boxStrokeColor="@color/purple"
            app:boxStrokeWidthFocused="2dp"
            app:boxCollapsedPaddingTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tiNombreMascota"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <AutoCompleteTextView
                android:id="@+id/autoInputRaza"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:inputType="text"
                android:paddingStart="16dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Owner name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiNombrePropietario"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/hint_nombre_propietario"
            app:hintTextColor="@color/dark_gray"
            app:boxStrokeColor="@color/purple"
            app:boxStrokeWidthFocused="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tiRaza">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNombrePropietario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLength="30" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Teléfono -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiTelefono"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/telefono"
            app:hintTextColor="@color/dark_gray"
            app:boxStrokeColor="@color/purple"
            app:boxStrokeWidthFocused="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tiNombrePropietario">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Botón guardar -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEditarCita"
            android:layout_height="wrap_content"
            android:text="@string/editar_cita"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:icon="@android:drawable/ic_menu_edit"
            app:iconTint="@android:color/white"
            app:iconPadding="8dp"
            android:backgroundTint="@color/pink"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiTelefono"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cornerRadius="16dp"
            android:enabled="false"
            android:layout_width="wrap_content"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>